--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -7,7 +7,10 @@
         android:id="@+id/track_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="32dp"
+        android:textSize="20dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+
         android:text="album name"/>
 
 </LinearLayout>
