--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <integer-array name="backgrounds">
+        <item>@drawable/pause</item>
+        <item>@drawable/play</item>
+    </integer-array>
+
 </resources>
