--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -25,22 +25,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/songName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:minHeight="10dp"
-        android:paddingHorizontal="10sp"
-        android:paddingVertical="20sp"
-        android:text="Name of the Song"
+        android:paddingVertical="5sp"
+        android:text="Name of the song"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.989" />
 
     <ImageButton
         android:id="@+id/pauseplay"
@@ -95,6 +96,8 @@
 
 
 </android.support.constraint.ConstraintLayout>
+
+
 
     <!--<ListView-->
     <!--android:id="@+id/album_track_list"-->
