some features updated

--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -177,6 +177,7 @@
     <item android:drawable="@drawable/previous"></item>
     <item android:drawable="@drawable/fastforward"></item>
     <item android:drawable="@drawable/rewind"></item>
+    <item android:drawable="@drawable/back"></item>
 
 </vector>
 
