--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -22,6 +22,20 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/playAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play All"
+        android:textSize="25dp"
+        android:layout_marginBottom="450dp"
+        android:layout_marginLeft="150dp"
+        android:textColor="#ff0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/album_track_list"
         android:layout_width="368dp"
