--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.team9.flashbackmusic_team9.AlbumTracksActivity"
-    tools:showIn="@layout/activity_album_tracks">
+    tools:showIn="@layout/activity_album_tracks"
+    android:background="#822222">
 
     <Button
         android:id="@+id/back"
@@ -51,6 +52,8 @@
         android:paddingVertical="5sp"
         android:text="Name of the song"
         android:textSize="10sp"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
