--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.team9.flashbackmusic_team9.AlbumTracksActivity"
-    tools:showIn="@layout/activity_album_tracks"
-    android:background="#822222">
+    tools:showIn="@layout/activity_album_tracks">
 
     <Button
         android:id="@+id/back"
