--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -168,8 +168,6 @@
         android:strokeColor="#33FFFFFF"
         android:strokeWidth="0.8" />
 
-    <item android:drawable="@drawable/pauseplay">
-    </item>
 
     <item android:drawable="@drawable/pause"></item>
     <item android:drawable="@drawable/play"></item>
@@ -178,6 +176,7 @@
     <item android:drawable="@drawable/fastforward"></item>
     <item android:drawable="@drawable/rewind"></item>
     <item android:drawable="@drawable/back"></item>
+    <item android:drawable="@drawable/blue_background_1"></item>
 
 </vector>
 
