--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -36,15 +36,17 @@
         android:id="@+id/playAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play All"
-        android:textSize="25dp"
         android:layout_marginBottom="450dp"
         android:layout_marginLeft="150dp"
+        android:text="Play All"
         android:textColor="#ff0000"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
 
     <ListView
         android:id="@+id/album_track_list"
