--- a/app/src/main/res/layout/content_album_tracks.xml
+++ b/app/src/main/res/layout/content_album_tracks.xml
@@ -20,11 +20,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.004" />
 
-    <Button
+    <TextView
         android:id="@+id/album_name"
         android:layout_width="225sp"
         android:layout_height="wrap_content"
         android:text="Album Name"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.283"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -59,76 +60,78 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/songName"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:minHeight="10dp"
-        android:paddingVertical="5sp"
-        android:text="Name of the song"
-        android:textSize="10sp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.989" />
-
-    <ImageButton
-        android:id="@+id/pauseplay"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/pause"
-        android:clickable="true"
-        android:focusable="true"
-        android:minHeight="10dp"
-        android:minWidth="10dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966" />
-
-    <ImageButton
-        android:id="@+id/previous"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/previous"
-        android:clickable="true"
-        android:focusable="true"
-        android:minHeight="10dp"
-        android:minWidth="10dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.759"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966" />
-
-    <ImageButton
-        android:id="@+id/next"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/next"
-        android:clickable="true"
-        android:focusable="true"
-        android:minHeight="10dp"
-        android:minWidth="10dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.977"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966" />
-
-
+    <include android:id="@+id/player_toolbar" layout="@layout/player_toolbar"/>
 </android.support.constraint.ConstraintLayout>
+
+    <!--<Button-->
+        <!--android:id="@+id/songName"-->
+        <!--android:layout_width="270dp"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:minHeight="10dp"-->
+        <!--android:paddingVertical="5sp"-->
+        <!--android:text="Name of the song"-->
+        <!--android:textSize="10sp"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:textColor="#ffffff"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.0"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.989" />-->
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/pauseplay"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:background="@drawable/pause"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--android:minHeight="10dp"-->
+        <!--android:minWidth="10dp"-->
+
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.87"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.966" />-->
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/previous"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:background="@drawable/previous"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--android:minHeight="10dp"-->
+        <!--android:minWidth="10dp"-->
+
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.759"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.966" />-->
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/next"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:background="@drawable/next"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--android:minHeight="10dp"-->
+        <!--android:minWidth="10dp"-->
+
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.977"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.966" />-->
+
+
 
 
 
