--- a/app/src/main/res/layout/content_all_albums.xml
+++ b/app/src/main/res/layout/content_all_albums.xml
@@ -44,5 +44,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+    <include android:id="@+id/player_toolbar" layout="@layout/player_toolbar"/>
 
 </android.support.constraint.ConstraintLayout>
