--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="All Tracks"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginBottom="450dp"
-        android:layout_marginRight="200dp"
+        android:layout_marginRight="270dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,9 +26,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="All albums"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:layout_marginBottom="450dp"
-        android:layout_marginLeft="200dp"
+        android:layout_marginRight="20dp"
+        android:textColor="#ff0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FlashBack"
+        android:textSize="20dp"
+        android:layout_marginBottom="450dp"
+        android:layout_marginLeft="250dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
