--- a/app/src/main/res/layout/content_playing.xml
+++ b/app/src/main/res/layout/content_playing.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:text = "BACK"/>
 
-
     <ImageButton
         android:id="@+id/likeButton"
         android:layout_width="30dp"
@@ -24,13 +23,15 @@
         android:layout_alignParentTop="true"
         android:minHeight="10dp"
         android:minWidth="10dp"
+        android:clickable="true"
+        android:focusable="true"
         android:background="@drawable/plus" />
 
     <TextView
         android:id = "@+id/title"
         android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
-        android:textSize = "30dp"
+        android:textSize = "30sp"
         android:layout_below="@id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +41,7 @@
         android:id = "@+id/artist"
         android:layout_below="@id/title"
         android:text = "Artist"
-        android:textSize = "30dp"
+        android:textSize = "30sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
@@ -53,7 +54,7 @@
         android:layout_marginTop = "10dp"
         android:layout_centerHorizontal="true"
         android:text = "Album"
-        android:textSize = "30dp"
+        android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
     <TextView
@@ -63,7 +64,7 @@
         android:layout_marginTop = "100dp"
         android:layout_centerHorizontal="true"
         android:text = "Location"
-        android:textSize = "30dp"
+        android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
     <TextView
@@ -73,12 +74,12 @@
         android:layout_marginTop = "150dp"
         android:layout_centerHorizontal="true"
         android:text = "Time"
-        android:textSize = "30dp"
+        android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
 
     <ImageButton
-        android:id = "@+id/imageButtonPrev"
+        android:id = "@+id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below="@id/location"
@@ -88,8 +89,8 @@
         android:src="@drawable/previous" />
 
     <ImageButton
-        android:id = "@+id/imageButtonPrause"
-        android:layout_toRightOf="@id/imageButtonPrev"
+        android:id = "@+id/play_pause_button"
+        android:layout_toRightOf="@id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below = "@id/location"
@@ -99,8 +100,8 @@
         android:src="@drawable/pause"/>
 
     <ImageButton
-        android:id = "@+id/imageButtonNext"
-        android:layout_toRightOf="@id/imageButtonPrause"
+        android:id = "@+id/nextButton"
+        android:layout_toRightOf="@id/play_pause_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below = "@id/location"
