--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants">
 
     <TextView
-        android:id="@+id/track_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/track_names"
+        android:layout_width="0sp"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
         android:textSize="20dp"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
-        android:text="track name"/>
+        android:gravity="center_vertical" />
 
     <ImageButton
-        android:id="@+id/atomPay_removePay"
+        android:id="@+id/change_status"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="fitXY"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:minHeight="10dp"
         android:minWidth="10dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:onClick="removeAtomPayOnClickHandler"
+        android:clickable="false"
         android:src="@drawable/plus" />
+
 
 </LinearLayout>
