--- a/app/src/main/res/layout/content_playing.xml
+++ b/app/src/main/res/layout/content_playing.xml
@@ -32,6 +32,8 @@
         android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:textSize = "30sp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:layout_below="@id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +44,8 @@
         android:layout_below="@id/title"
         android:text = "Artist"
         android:textSize = "30sp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
@@ -54,6 +58,8 @@
         android:layout_marginTop = "10dp"
         android:layout_centerHorizontal="true"
         android:text = "Album"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
@@ -61,9 +67,11 @@
         android:id = "@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "100dp"
+        android:layout_marginTop = "50dp"
         android:layout_centerHorizontal="true"
         android:text = "Location"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
@@ -71,9 +79,11 @@
         android:id = "@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "150dp"
+        android:layout_marginTop = "100dp"
         android:layout_centerHorizontal="true"
         android:text = "Time"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textSize = "30sp"
         android:layout_below="@id/artist"/>
 
@@ -83,10 +93,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below="@id/location"
-        android:layout_marginTop = "80dp"
+        android:layout_marginTop = "120dp"
         android:scaleType="fitXY"
         android:layout_marginLeft = "15dp"
-        android:src="@drawable/previous" />
+        android:background="@drawable/previous" />
 
     <ImageButton
         android:id = "@+id/play_pause_button"
@@ -94,9 +104,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below = "@id/location"
-        android:layout_marginTop = "80dp"
+        android:layout_marginTop = "120dp"
         android:layout_marginLeft = "60dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:background="@drawable/play"/>
 
     <ImageButton
         android:id = "@+id/nextButton"
@@ -104,9 +115,9 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below = "@id/location"
-        android:layout_marginTop = "80dp"
+        android:layout_marginTop = "120dp"
         android:layout_marginLeft = "60dp"
         android:scaleType="fitXY"
-        android:src = "@drawable/next"/>
+        android:background="@drawable/next"/>
 
 </RelativeLayout>
