--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,8 @@
         android:layout_height="fill_parent"
         android:layout_weight="2"
         android:textSize="20dp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:gravity="center_vertical" />
