fix favorite status conflict

--- a/app/src/main/res/layout/content_playing.xml
+++ b/app/src/main/res/layout/content_playing.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text = "BACK"/>
 
-    <com.example.team9.flashbackmusic_team9.FavoriteStatusButton
+    <ImageButton
         android:id="@+id/likeButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
