--- a/app/src/main/res/layout/content_playing.xml
+++ b/app/src/main/res/layout/content_playing.xml
@@ -27,6 +27,13 @@
         android:focusable="true"
         android:background="@drawable/plus" />
 
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/back"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:id = "@+id/title"
         android:layout_marginTop = "20dp"
