--- a/app/src/main/res/layout/activity_view_playlist.xml
+++ b/app/src/main/res/layout/activity_view_playlist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.team9.flashbackmusic_team9.FlashBackActivity">
+    tools:context="com.example.team9.flashbackmusic_team9.ViewPlaylistActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_flash_back" />
+    <include layout="@layout/content_view_playlist" />
+
 
 </android.support.design.widget.CoordinatorLayout>
