--- a/app/src/main/res/layout/content_flash_back.xml
+++ b/app/src/main/res/layout/content_flash_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,17 +9,129 @@
     tools:showIn="@layout/activity_flash_back">
 
     <Button
-        android:id="@+id/mode"
+        android:id="@+id/viewPlaylist"
+        android:layout_marginLeft="120dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Normal"
-        android:textSize="20dp"
-        android:layout_marginBottom="450dp"
-        android:layout_marginRight="250dp"
-        android:textColor="#ff0000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="View Playlist" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id = "@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = "BACK"/>
+
+    <ImageButton
+        android:id="@+id/likeButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="fitXY"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:minHeight="10dp"
+        android:minWidth="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@drawable/plus" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/back"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id = "@+id/title"
+        android:layout_marginTop = "20dp"
+        android:layout_centerHorizontal="true"
+        android:textSize = "30sp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:layout_below="@id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = "Title"/>
+
+    <TextView
+        android:id = "@+id/artist"
+        android:layout_below="@id/title"
+        android:text = "Artist"
+        android:textSize = "30sp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id = "@+id/album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop = "10dp"
+        android:layout_centerHorizontal="true"
+        android:text = "Album"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:textSize = "30sp"
+        android:layout_below="@id/artist"/>
+
+    <TextView
+        android:id = "@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop = "50dp"
+        android:layout_centerHorizontal="true"
+        android:text = "Location"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:textSize = "30sp"
+        android:layout_below="@id/artist"/>
+
+    <TextView
+        android:id = "@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop = "100dp"
+        android:layout_centerHorizontal="true"
+        android:text = "Time"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:textSize = "30sp"
+        android:layout_below="@id/artist"/>
+
+
+    <ImageButton
+        android:id = "@+id/prevButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below="@id/location"
+        android:layout_marginTop = "120dp"
+        android:scaleType="fitXY"
+        android:layout_marginLeft = "15dp"
+        android:background="@drawable/previous" />
+
+    <ImageButton
+        android:id = "@+id/play_pause_button"
+        android:layout_toRightOf="@id/prevButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below = "@id/location"
+        android:layout_marginTop = "120dp"
+        android:layout_marginLeft = "60dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/play"/>
+
+    <ImageButton
+        android:id = "@+id/nextButton"
+        android:layout_toRightOf="@id/play_pause_button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below = "@id/location"
+        android:layout_marginTop = "120dp"
+        android:layout_marginLeft = "60dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/next"/>
+
+</RelativeLayout>
