--- a/app/src/main/res/layout/content_all_albums.xml
+++ b/app/src/main/res/layout/content_all_albums.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="All Albums"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginBottom="450dp"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="0dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,9 +26,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="All Tracks"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:layout_marginBottom="450dp"
-        android:layout_marginRight="200dp"
+        android:layout_marginRight="250dp"
+        android:textColor="#ff0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/flash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Flashback"
+        android:textSize="20dp"
+        android:layout_marginBottom="450dp"
+        android:layout_marginLeft="250dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,8 +52,8 @@
     <ListView
         android:id="@+id/album_list"
         android:layout_width="368dp"
-        android:layout_height="437dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
