--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -90,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="450dp"
         android:layout_marginRight="100dp"
+        android:background="#dadada"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
