add setter for user to set current time

--- a/app/src/main/res/layout/content_flash_back.xml
+++ b/app/src/main/res/layout/content_flash_back.xml
@@ -23,6 +23,14 @@
         android:layout_height="wrap_content"
         android:text = "BACK"/>
 
+    <Button
+        android:id = "@+id/setTime"
+        android:layout_marginTop = "15dp"
+        android:layout_marginLeft="280dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = "set time"/>
+
     <ImageButton
         android:id="@+id/likeButton"
         android:layout_width="30dp"
